styles.css
html {
  scroll-behavior: smooth;
}

body {
    padding:0;
    margin:0;
}

p {
    font-family: 'PT Sans' ;
    color: black;
}

h1 {
    font-family: 'Bebas Neue' ;
    color:black;
}



/* -------------------------------welcome page css --------------------------------*/
.opening {
    position: relative;
    text-align: center;
    height: 100vh;

}

.opening img {
    object-fit: cover;
    height: 100vh;
    width: 100vw;
}

.opening i {
    color:#FDBB30;
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    top:80%;
    text-align: center;
    animation: fadeIn2, bounce;
    animation-duration: 12s, 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1, infinite;
    font-size: 30px;
}

.opening .para1{
    top: 20%;
    left: 50%;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    color:#FDBB30;
    font-family: 'Bebas Neue' ;
    font-size: 5em;
}

.opening .para2{
    top: 35%;
    left: 50%;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    color: #FDBB30;
    font-family: 'Bebas Neue' ;
    font-size: 80px;
    font-size: 7em;
}

.opening p {
    color: white !important;
    animation: fadeIn2;
    animation-duration: 8s;
    animation-fill-mode: forwards;
    top: 60%;
    left: 50%;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    font-size: 25px;
    font-family: 'PT Sans' ;
}



/* -------------------------------chapt 0 css --------------------------------*/

#chapt0 {
    position: relative;
}

#chapt0 img {
    object-fit: cover;
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

#c01, #c02 {
    font-size: 22px;
}

#chapt0 #c01 {
    color:white;
    position: absolute;
    top: 15%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    margin-bottom: 20px;
    font-family: 'PT Sans' ;
    
}

#chapt0 #c02 {
    color:white;
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: 'PT Sans' ;
}

#c03 {
    color:white;
    position: absolute;
    top: 65%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: 'Bebas Neue';
    font-size: 5em;
}

#chapt0 i {
    color:#FDBB30;
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    top:80%;
    text-align: center;
    animation: fadeIn2, bounce;
    animation-duration: 12s, 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1, infinite;
    font-size: 30px;
}

#chapt0 p, #c03{
    display: none;
}

#chapt0:hover #c03, #chapt0:hover p  {
    display: block;
}

/* -------------------------------failure resume --------------------------------*/

#failr img {
    height: 80vh;
    
}

#herotxt1 {
    position: relative;
    bottom: 40%;
    font-size: 6em;
    left: 25%;
    color: #6f263d;
}

#herotxt2 {
    position: relative;
    bottom: 47%;
    left:35%;
    font-size: 7em;
    color: #6f263d;
}

#herotxt3 {
    font-size: 0.8em;
    font-family: 'PT Sans' ;
    transform: rotate(-90deg);
    position: absolute;
    color: grey;
    left:80%;
    top:70%;
    width: 500px;
    text-align: left;
    font-style: italic;
}

#resume {
    position: relative;
    top:20%;
    left:40%;
    width:300px;
    color: rgba(0,0,0,0.5);
}

.gline {
    border-left: 3px solid #FDBB30;
}

.wline {
    border-left: 3px solid #6f263d;
}

@media (max-width:768px) {
    #resume {
        position: static;
        padding: 20px;
        height: 30vh;
    }
}


/* -------------------------------matchup --------------------------------*/

#vscurry {
    height: 90%;
    position: absolute;
    top:10vh;
    left:5%;
}

#test {
    position: absolute;
    top:50%;
    left:120%;
    display:none;
    animation: expand; 
    animation-duration:2s;
    animation-iteration-count:1;
    animation-fill-mode:forwards;
    
}












/* #matchup h1, #matchup p{
    color: black;
}

#matchup i {
    color:white;
}

#vs h1 {
    font-size: 2em;
}

#vs {
    box-shadow: 
    -5px 0px 10px rgba(0,0,0,0.5);
    border: 1px solid rgba(255,255,255, 1);
    background-color: white;
    padding:20px;
}

#vsbron {
    background-image: url(images/matchup/vsbron.png);
    background-size: cover;
}

#vscurry {
    box-shadow: inset 5px 0px 10px rgba(0,0,0,0.5);
    background-image: url(images/matchup/vscurry.png);
    background-size: cover;
} */



























/* -------------------------------chapt1 css --------------------------------*/
#chapt1 > div{
    height: 100vh;
}


#chapt1 img {
    position: absolute;
    height: 90vh;
    top: 5%;
    left: 50%;
    transform: translateX(-50%);
}

#a1 {
    position: absolute;
    font-size: 3.9em;
    padding:10px;
    margin: 0 auto;
}


#a2 {
    position: absolute;
    top:40%;
    font-size: 6em;
    right:40%;
    
}

#a3 {
    position: absolute;
    top:55%;
    font-size: 6em;
    left:40%;
}






/* -------------------------------chapt1.5 css --------------------------------*/
#chapt1b > .row {
    height: 50vh;
}

#ib1 {
    background: url(images/chapt1/draft-day-portrait.jpg) center center;
    background-size: cover;
}

#ib2 {
    background: url(images/chapt1/vspistons.jpg) center center;
    background-size: cover;
}

#ib3 {
    background: url(images/chapt1/vsspurs.jpg) center center;
    background-size: cover;
}


#a4 div {
    height: 300px;
    width: 92%;
    background-color: white;
    border-radius: 15px;
    box-shadow: 5px 5px 10px rgba(0,0,0,0.3),
    -5px -5px 10px rgba(255,255,255,0.3);
    border: 1px solid rgba(255,255,255, 0.8);
}

#a4 p {
    color: black;
}


/* -------------------------------chapt2 css --------------------------------*/

#chapt2 {
    position: relative;
    height: 100vh;
    color:white;
}

#villain {
    width:100vw;
    height: 100vh;
}

#villain img {
    height:40vh;
    object-fit: cover;
    position: absolute;
    transform: translateX(-50%);
    left:50%;
    top:12%;
}

#villain h1 {
    font-family: 'Bebas Neue' ;
    text-align: center;
    font-size: 10vh;
    letter-spacing: 10px;
}

#c21 {
    top: 47%;
    left:5%;
    text-align: left;
    font-size: 17px ;
}

#c22 {
    top:60%;
    text-align: right;
    font-size: 14px ;
}

#c21, #c22 {
    position: absolute;
    font-family: 'PT Sans' ;
    color: white;
}

@media (min-width:400px) {
    #villain h1 {
        font-size: 20vh;
    }

    #villain img{
        height: 45vh;
    }

}

@media (min-width:570px) {
    #villain h1 {
        font-size: 30vh;
    }

    #villain img{
        height: 50vh;
    }

    #c21, #c22 {
        font-size: 18px;
    }
}

@media (min-width:700px) {
    #villain h1 {
        font-size: 40vh;
    }

    #villain img{
        height: 55vh;
    }

    #c21, #c22 {
        font-size: 20px;
    }
}

@media (min-width:850px) {
    #villain h1 {
        font-size: 50vh;
    }

    #villain img{
        height: 60vh;
    }

    #c21, #c22 {
        font-size: 25px;
    }
}

   
/* -------------------------------chapt2.5 css --------------------------------*/    


.court {
    height: 300px;
    border-radius: 0 0 41.6vw 41.6vw;
    border: 5px #ffb81c solid;
}

/* .mycard {
    height: 50vh;
    border: 5px #ffb81c solid;
} */

#vsceltics {
    background-image: url(images/chapt2/bron2.jpg);
    background-size: cover;
    background-position: center;
}


/* -------------------------------chapt3 css --------------------------------*/
#chapt3, #chapt3b, #chapt3c {
    height: 100vh;
    position: relative;
    text-align: center;
}

#chapt3 h1 {
    color: white;
}

#chapt3 #frus {
    object-fit: cover;
    height: 100vh;
    width: 100vw;
}

#chapt3 #p31 {
    top: 20%;
    left: 50%;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    font-size: 18px;
    font-family: 'PT Sans' ;
    width:300px;
}

#chapt3 #p32 {
    top: 40%;
    left: 50%;
    position: absolute;
    transform: translateX(-50%) translateY(-50%);
    font-size: 18px;
    font-family: 'PT Sans' ;
    width:300px;
}


#p33 {
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    font-size: 2.5em;
}

#p34 {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    font-size: 1.2em;
}

#p35 {
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    font-size: 1.2em;
}

#p36 {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    font-size: 1.2em;
}

#p37 {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    font-size: 1.2em;
}

















/* #chapt3 {
    height: 100vh;
}

#chapt3 p {
    color: white;
    background-color: rgba(0,0,0,1);
    font-weight: bold;
    font-family: 'PT Sans' ;
}

#chapt3 h1 {
    color: white;
    background-color: rgba(0,0,0,1);
    font-family: 'Bebas Neue';
}

#chapt3 img {
    object-fit: cover;
    height: 100vh;
    width: 100vw;
    position: absolute;
    display:none;
}

#c31, #c32, #c33 {
    text-align: center;
    display:none;
    position: absolute;
}

#c31 {
    top:40%;
}

#c32 {
    top:30%;
}

#c33 {
    top:50%;
} */

/* -------------------------------chapt4 css --------------------------------*/

#chapt4, #chapt4b {
    color: white;
    height: 100vh;
    background-color: rgba(0,0,0,1);
    font-weight: bold;
    font-family: 'PT Sans' ;
    text-align: center;
}

#c41,#c45 {
    top: 5%;
    position: absolute;
}

#c42,#c46 {
    top:15%;
    position: absolute;
}

#c43 {
    top: 25%;
    position: absolute;
}

#c44, #c47 {
    top: 35%;
    position: absolute;
}


.highlight {
    color:#FDBB30;
}

.gifset {
    position: absolute;
    top: 50%; 
}

.gif {
    max-width: 400px;
    max-height: 130px;
}

/* -------------------------------chapt4b css --------------------------------*/














/* -------------------------------general css --------------------------------*/



#c11, #c12, #c13, #c14, #c15, #c16 {
    display: none;
    position: absolute;
    font-family: 'PT Sans' ;
    text-align: justify;
    color: white;
}

#c23, #c24, #c25 {
    display: none;
    font-family: 'PT Sans' ;
    text-align: justify;
    color: white;
}

